--- a/sh/sass/sh/_vars.scss
+++ b/sh/sass/sh/_vars.scss
@@ -9,6 +9,7 @@ $sh-light-gray:                 #aaaaaa !default;
 $sh-dark-gray:                  #666666 !default;
 $sh-darkest-gray:               #333333 !default;
 $sh-blue:                       #333399 !default;
+$sh-black:                      #000000 !default;
 $sh-red:                        #e13c4f !default;
 $sh-pink:                       #ffd6d8 !default;
 $sh-light-text-shadow-color:    #fefefe !default;
